# ol-type-library

./: README.md  pyproject.toml
docs/: conf.py  index.rst  modules.rst  oltl.rst
oltl/: __init__.py  core.py  exceptions.py  settings.py  utils.py
tests/: conftest.py  fixtures.py  test_core.py  test_package.py  test_settings.py  test_utils.py
tests/fixtures/: settings.yaml  settings.yml  settings1.json
