[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]


[project]
name = "oltl"
description = "oltl is a library for common types and utilities."
authors = [
    {name = "osoken"},
]
dynamic = [
    "version", 
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "pydantic",
    "python-dateutil",
    "pydantic_settings",
    "ulid-py",
]

[project.urls]
Source = "https://github.com/osoekawaitlab/ol-type-library"

[tool.setuptools]
packages=["oltl"]

[tool.setuptools.package-data]
oltl = ["py.typed"]

[project.optional-dependencies]
dev=[
    "black",
    "flake8",
    "pyproject-flake8",
    "pytest",
    "mypy",
    "tox",
    "isort",
    "pytest-mock",
    "pytest-cov",
    "freezegun",
    "types-python-dateutil",
    "factory_boy",
    "polyfactory",
]
prod=[
]
docs=[
    "sphinx",
    "sphinx_rtd_theme",
    "sphinx-autodoc-typehints",
]


[tool.pytest.ini_options]
addopts = ["-sv", "--doctest-modules", "--cov=oltl", "--cov-report=xml", "--cov-report=term-missing"]
testpaths = ["tests", "oltl"]
filterwarnings = [
    "error",
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.flake8]
max-line-length = 120
extend-ignore = "E203,E701"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
mypy_path = "stubs/"

[tool.pydantic.mypy]
init_typed = true

[tool.isort]
profile = "black"

[tool.tox]
legacy_tox_ini = """
    [tox]
    skipsdist = true
    envlist = py310, docs

    [testenv]
    setenv = 
        VIRTUALENV_PIP = 24.0
    deps =
        -e .[dev]
    commands = 
        black oltl tests
        isort oltl tests
        pytest
        pflake8 oltl/ tests/ stubs/
        mypy oltl --strict --show-traceback
        mypy tests --strict

    [testenv:docs]
    deps = 
        -e .[docs]
    commands =
        sphinx-apidoc -o docs/ oltl
        sphinx-build -b html docs/ docs/_build
"""
